# openapi/types.gen.go
@@ -3,6 +3,11 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
 package openapi
 
+const (
+	AuthorizationScopes       = "Authorization.Scopes"
+	Authorization_AdminScopes = "Authorization_Admin.Scopes"
+)
+
 // アイテム
 type Item struct {
 	// アイテム説明
@@ -19,5 +24,11 @@ type Item struct {
 // PostItemsJSONBody defines parameters for PostItems.
 type PostItemsJSONBody = Item
 
+// PutItemJSONBody defines parameters for PutItem.
+type PutItemJSONBody = Item
+
 // PostItemsJSONRequestBody defines body for PostItems for application/json ContentType.
 type PostItemsJSONRequestBody = PostItemsJSONBody
+
+// PutItemJSONRequestBody defines body for PutItem for application/json ContentType.
+type PutItemJSONRequestBody = PutItemJSONBody
